{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 40,
  "lineage": "74d06a28-9d3a-44f7-3c9e-4539c868ce8d",
  "resources": [
    {
      "module": "module.nginx_server_develop",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "module.nginx_server_develop.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:205863710873:instance/i-013191945c5433c41",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013191945c5433c41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server_ssh_develop",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e278d58599d5448",
            "private_dns": "ip-172-31-29-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.29.207",
            "public_dns": "ec2-3-88-171-206.compute-1.amazonaws.com",
            "public_ip": "3.88.171.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0896f0b4195b05c30",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-server-dev_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c36f31ca86cf3336",
            "tags": {
              "Enviroment": "develop",
              "Name": "nginx-server-dev",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "develop",
              "Name": "nginx-server-dev",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a9dd20163ced4d4c"
            ]
          },
          "dependencies": [
            "module.nginx_server_develop.aws_key_pair.nginx_server_ssh",
            "module.nginx_server_develop.aws_security_group.nginx_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server_develop",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_server_sg",
      "provider": "module.nginx_server_develop.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205863710873:security-group/sg-0a9dd20163ced4d4c",
            "description": "Security group allowing ssh and http access to nginx-server-dev",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9dd20163ced4d4c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-dev_sg",
            "name_prefix": "",
            "owner_id": "205863710873",
            "revoke_rules_on_delete": false,
            "tags": {
              "Enviroment": "develop",
              "Name": "nginx-server-dev server security group",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "develop",
              "Name": "nginx-server-dev server security group",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3e7bb56113e0f8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.nginx_server_qa",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "module.nginx_server_qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:205863710873:instance/i-0abf3ddc6895de578",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abf3ddc6895de578",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-server_ssh_qa",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e2dd9f2ba8a8fd8e",
            "private_dns": "ip-172-31-28-112.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.112",
            "public_dns": "ec2-50-16-31-39.compute-1.amazonaws.com",
            "public_ip": "50.16.31.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e1c90b35f067a918",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-server-qa_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c36f31ca86cf3336",
            "tags": {
              "Enviroment": "qa",
              "Name": "nginx-server-qa",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "qa",
              "Name": "nginx-server-qa",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f26fc2d02d4df652"
            ]
          },
          "dependencies": [
            "module.nginx_server_qa.aws_key_pair.nginx_server_ssh",
            "module.nginx_server_qa.aws_security_group.nginx_server_sg"
          ]
        }
      ]
    },
    {
      "module": "module.nginx_server_qa",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_server_sg",
      "provider": "module.nginx_server_qa.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:205863710873:security-group/sg-0f26fc2d02d4df652",
            "description": "Security group allowing ssh and http access to nginx-server-qa",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f26fc2d02d4df652",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-qa_sg",
            "name_prefix": "",
            "owner_id": "205863710873",
            "revoke_rules_on_delete": false,
            "tags": {
              "Enviroment": "qa",
              "Name": "nginx-server-qa server security group",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "tags_all": {
              "Enviroment": "qa",
              "Name": "nginx-server-qa server security group",
              "Owner": "wilfredosulbaran94@gmail.com",
              "Project": "webinar",
              "Team": "DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb3e7bb56113e0f8"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}